--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,28 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <style type="text/css">
+      .autocomplete-input:focus{
+  background: #303030;
+  border: none;
+  padding: 2% 18%;
+  font-size: 1.2em;
+  border-radius: 20px;
+  color: #FFF;
+  margin-top: 5%;
+}
+
+  .autocomplete-input{
+    background: #303030;
+  border: none;
+  padding: 2% 8%;
+  font-size: 1.2em;
+  border-radius: 20px;
+  color: #FFF;
+  margin-top: 5%;
+  }
+
+    </style>
   </body>
 </html>
