--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,12 @@
   margin-top: 5%;
   }
 
+  @media only screen and (min-width: 900px){
+    body{
+      margin: 0px;
+    }
+  }
+
     </style>
   </body>
 </html>
