--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <meta name="viewport" content="width=1000"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
@@ -19,31 +19,29 @@
     <!-- built files will be auto injected -->
 
     <style type="text/css">
-      .autocomplete-input:focus{
-  background: #303030;
-  border: none;
-  padding: 2% 18%;
-  font-size: 1.2em;
-  border-radius: 20px;
-  color: #FFF;
-  margin-top: 5%;
-}
+    .autocomplete-input:focus{
+      background: #303030;
+      border: none;
+      padding: 2% 18%;
+      font-size: 1.2em;
+      border-radius: 20px;
+      color: #FFF;
+      margin-top: 5%;
+    }
 
   .autocomplete-input{
     background: #303030;
-  border: none;
-  padding: 2% 8%;
-  font-size: 1.2em;
-  border-radius: 20px;
-  color: #FFF;
-  margin-top: 5%;
+    border: none;
+    padding: 2% 8%;
+    font-size: 1.2em;
+    border-radius: 20px;
+    color: #FFF;
+    margin-top: 5%;
   }
 
-  @media only screen and (min-width: 900px){
-    body{
-      margin: 0px;
-    }
-  }
+
+  
+
 
     </style>
   </body>
