change selection property

--- a/public/index.html
+++ b/public/index.html
@@ -63,9 +63,17 @@
     border-radius: 10px;  
     background-color: #ffffff; 
 }
+body{
+  -webkit-user-select: none;
+     -moz-user-select: -moz-none;
+      -ms-user-select: none;
+          user-select: none;
+}
 
-  
-
+input,
+textarea {
+     -moz-user-select: text;
+}
 
     </style>
   </body>
